[package]
name = "lumi-server-defs"
version = "0.1.0"
authors = ["Lencerf <changyuan.lv@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
lumi = { git = "https://github.com/Lencerf/lumi.git", rev = "9aea580", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.10.3"
chrono = {version = "0.4", features = ["serde"]}