[package]
name = "lumi-web"
version = "0.1.0"
authors = ["Lencerf <changyuan.lv@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lumi = { git = "https://github.com/Lencerf/lumi.git", rev = "9aea580", features = ["serde"]}
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
anyhow = "1.0.32"
serde_json = "1"
rust_decimal = "1.10.3"
lumi-server-defs = {path = "../lumi-server-defs"}
log = "0.4.6"
wasm-logger = "0.2.0"
serde_urlencoded = "0.7"
chrono = {version = "0.4"}

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true